* type=securityprofile | introduce actions=custom-url-category-remove-ending-token - 'custom-url-category-remove-ending-token:*' - '*' can only be added if '/' is last char
* type=rule actions=display shadow-json - improve output if source/destination isAny()
* type=custom-report | introduce new utility

BUGFIX:
* type=zone | actions=display bugfix
* type=securityprofile securityprofiletype=custom-url-category 'actions=custom-url-category-add-ending-token:*'  - fix for token '*' to not skip

GENERAL:
* bugfixes for PHP version 8.2 - 'PHP Deprecated:  Creation of dynamic property'
* class AppFilter / CallContext - improvement for PHP 8.2
* remove deprecated utilities scripts
* update util actions/filter files
* class TAG - improve PHPdoc - methods/variable declaration
* general - use 'XML_PARSE_BIG_LINES' on all classes where XMLfile is load
* update predefined to 8684-7912


2.0.73 (20230224)
UTIL:
* type=ssh-connector | introduction of new utility script
* type=address | introduce new 'filter=(reflocationtype is.template/is.only.template/is.devicegroup/is.only.devicegroup )'

BUGFIX:
* type=certificate | bugfix for reading hash for ec certificates

GENERAL:
* introduce PHP version validation - PHP 8.2 is NOT yet supported


2.0.72 (20230220)
UTIL:
* type=upload | improvement if in=api:// is used but no out= is defined
* type=device | actions=display-shadowrule:file.html - improvement to store full rule informtaion into html
* type=certificate | introduce 'filter=(publickey-algorithm is.rsa/is.ec) - publickey-hash is.sha1/is.sha256/is.sha384/is.sha512 - publickey-length <>!= VALUE
* type=certificate | introduce 'filter=(publickey-hash < sha256)'

BUGFIX:
* type=device | bugfix actions=display-shadowrule:file.html - to export correctly for all DG/vsys
* type=rule ruletype=defaultsecurity | bugfix to read predefined default-security-rules also if xpath post-rulebase is not set
* type=device actions=display-shadowrule | bugfix for multi-vsys